Fixed spacing issue with social links (footer).

--- a/app/assets/sass/partials/_components.scss
+++ b/app/assets/sass/partials/_components.scss
@@ -112,7 +112,7 @@ div.expand {
 
 	footer .social & {
 		height: 3.05rem;
-		margin: 0 $app-box-pad/4 0 0;
+		margin: 0 $app-box-pad/4 $app-box-pad/4 0;
 		padding: $app-box-pad/3;
 		line-height: 15px;
 		color: $app-color-alt;
